--- a/roses/frontend/scss/app.scss
+++ b/roses/frontend/scss/app.scss
@@ -7,6 +7,10 @@
 	font-family: sans-serif;
 }
 
+@mixin nice-padding() {
+	padding: 0.5rem;
+}
+
 body, html {
 	margin: 0;
 	padding: 0;
@@ -29,7 +33,7 @@ body {
 
 .header {
 	height: 4em;
-	padding: 0.5em;
+	@include nice-padding();
 	flex: 0 0 auto;
 	background-color: #bbbbbb;
 }
@@ -65,6 +69,8 @@ body {
 }
 .feeds--title {
 	font-size: 1em;
+	margin: 0;
+	@include nice-padding();
 }
 .feeds--list,
 .feeds--item {
@@ -75,7 +81,8 @@ body {
 .feed {
 	background-color: white;
 	border-bottom: 1px solid #ccc;
-	padding: 0.5em;
+	@include nice-padding();
+
 	cursor: pointer;
 }
 .feed--selected {
@@ -92,6 +99,8 @@ body {
 }
 .articles--title {
 	font-size: 1em;
+	margin: 0;
+	@include nice-padding();
 }
 .articles--list,
 .articles--item {
@@ -102,7 +111,7 @@ body {
 .article {
 	background-color: white;
 	border-bottom: 1px solid #ccc;
-	padding: 0.5em;
+	@include nice-padding();
 	cursor: pointer;
 }
 .article--unread {
@@ -114,7 +123,20 @@ body {
 .viewer {
 	background-color: #eeeeee;
 	position: relative;
+	display: flex;
+	flex-direction: column;
 }
+.viewer--title {
+	font-size: 1em;
+	margin: 0;
+	@include nice-padding();
+}
+
+.viewer--content {
+	position: relative;
+	flex: 1 0 auto;
+}
+
 .viewer--iframe {
 	position: absolute;
 	top: 0;
